<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="game.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onBtnStart"
            android:text="@string/start" />

        <Button
            android:id="@+id/btnRecords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onBtnRecords"
            android:text="@string/records" />

        <Button
            android:id="@+id/btnRules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onBtnRules"
            android:text="@string/rules" />

        <Button
            android:id="@+id/btnSettings_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onBtnSettings"
            android:text="@string/settings" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onBtnExite"
            android:text="@string/exit" />

    </LinearLayout>

</RelativeLayout>